--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Animal Count</string>
     <string name="add_one">Add one</string>
-    <string name="remove_one">Remove one</string>
+    <string name="delete_animal">Delete animal</string>
 </resources>
