Support adding animals with custom name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="delete_animal">Delete animal</string>
     <string name="add_animal">Add Animal</string>
     <string name="no_animals">No animals found</string>
+    <string name="animal_name">Animal name</string>
 </resources>
