--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="add_animal">Add Animal</string>
     <string name="no_animals">No animals found</string>
     <string name="animal_name">Animal name</string>
+    <string name="back_button">Back</string>
 </resources>
