--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="name">Name</string>
     <string name="emoji">Emoji</string>
     <string name="back_button">Back</string>
+    <string name="open_animal_detail_page">Open animal detail page</string>
 </resources>
